--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 	<video autoplay  poster="assets/sample.png" id="bgvid" loop>
 		<!-- WCAG general accessibility recommendation is that media such as background video play through only once. Loop turned on for the purposes of illustration; if removed, the end of the video will fade in the same way created by pressing the "Pause" button  -->
-		<source src="assets/sample.mp4" type="video/mp4">
+		<!-- <source src="assets/sample.mp4" type="video/mp4"> -->
+		<source src="assets/sample.webm" type="video/webm">
 	</video>
 	<div id="polina">
 		<h1>Axxon + Ela</h1>
