added new video files and edited index.html

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 </head>
 <body>
 
-	<video controls="true" poster="assets/sample.png" id="bgvid" loop>
+	<video autoplay  poster="assets/sample.png" id="bgvid" loop>
 		<!-- WCAG general accessibility recommendation is that media such as background video play through only once. Loop turned on for the purposes of illustration; if removed, the end of the video will fade in the same way created by pressing the "Pause" button  -->
 		<source src="assets/sample.mp4" type="video/mp4">
 		<source src="assets/sample.webm" type="video/webm">
+		<source src="assets/new.m4v">
+		<source src="assets/test.m4v">
 	</video>
 	<div id="polina">
 		<h1>Axxon + Ela</h1>
